--- a/Conword.html
+++ b/Conword.html
@@ -202,7 +202,7 @@
     //ถ้า     ไม่มี ห นำหน้า กรรมการ ไม่มี การอาชีวศึกษา.....ต่อท้าย จะแก้กรรมการเป็น กรรมาธิการ **ถ้าจะเพิ่่มคำข้างหน้าให้ใส่ | ได้ **
     { pattern: /(?<!ห)กรรมการ(?!การอาชีวศึกษา|ปปง| ปปง.|กสทช| กสทช. |การเลือกตั้ง|ตุลาการ|ปปช| ป.ป.ช.|สิทธิมนุษยชนแห่งชาติ|ป้อง|รับ|สรร|กิจการกระจาย|นโย)/g, newText: "กรรมาธิการ" },
     { pattern: /เลขา(?!นุการ|ธิการ)/g, newText: "เลขานุการ" },
-    { pattern: /นายก(?!รัฐมนตรี|องค์|เทศ|สมา|สภา|คณะ|ศูนย์)/g, newText: "นายกรัฐมนตรี" },
+    { pattern: /นายก(?!รัฐมนตรี|องค์|เทศ|สมา|สภา|คณะ|ศูนย์|ิ)/g, newText: "นายกรัฐมนตรี" },
 
 
     //เติมจุด***********************************************
