--- a/Conword.html
+++ b/Conword.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conword</title>
+    <link rel="icon" href="./icon.png">
     <div class="footer">
-      เวอร์ชัน 01.01.00  05/04/67
+      เวอร์ชัน 01.02.00  03/05/67
     </div>
     <style>
 
@@ -184,9 +185,13 @@
     { pattern: /กระทรวงเกษตร(?!และสหกรณ์)/g, newText: "กระทรวงเกษตรและสหกรณ์" },
     { pattern: /เพราะฉะนั้น(?! )/g, newText: "เพราะฉะนั้น " },
     { pattern: /ล้านล้าน(?!บาท)/g, newText: "ล้านล้านบาท" },
-    { pattern: /ผู้ว่า(?!ราชการ)/g, newText: "ผู้ว่าราชการ" },
     { pattern: /สหรัฐ(?!อเมริกา)/g, newText: "สหรัฐอเมริกา" },
     { pattern: /มัธยม(?!ศึกษา)/g, newText: "มัธยมศึกษา" },
+    { pattern: /พฤหัส(?!บดี)/g, newText: "พฤหัสบดี" },
+    { pattern: /สกล(?!นคร)/g, newText: "สกลนคร" },
+    { pattern: /อุบล(?!ราชธานี)/g, newText: "อุบลราชธานี" },
+   
+
     { pattern: /(?<!น้ำ|อันดา|ไข|เยอร)มัน(?!ฝรั่ง|สำปะหลัง|เทศ|แกว)/g, newText: "" },
     { pattern: /ก็(?!บ|ต|ง|จ|ด)/g, newText: "" },
     { pattern: /เ\*+วชาญ/g, newText: "เชี่ยวชาญ" },
@@ -204,10 +209,13 @@
     { pattern: /ล้าน(?!บาท|ค|ล|ต|ไ)/g, newText: "ล้านบาท" },  
 
     //ถ้า     ไม่มี ห นำหน้า กรรมการ ไม่มี การอาชีวศึกษา.....ต่อท้าย จะแก้กรรมการเป็น กรรมาธิการ **ถ้าจะเพิ่่มคำข้างหน้าให้ใส่ | ได้ **
-    { pattern: /(?<!ห)กรรมการ(?!ก|ป| |ต|ส|ร|น|ด|พ|บ|ม|ค)/g, newText: "กรรมาธิการ" },
+    //*******************************************************************
+    //***************************กรรมการ*********************************
+    { pattern: /(?<!ห|จ)กรรมการ(?!ก|ป| |ต|ส|ร|น|ด|พ|บ|ม|ค|จ)/g, newText: "กรรมาธิการ" },
+    //*******************************************************************
     { pattern: /เลขา(?!นุการ|ธิการ)/g, newText: "เลขานุการ" },
     { pattern: /(?<!หม่อน)ไหม(?!ทอง|พรม|้)/g, newText: "หรือไม่" },
-    { pattern: /นายก(?!รัฐมนตรี|อ|เ| |ส|ค|ศ|ิ)/g, newText: "นายกรัฐมนตรี" },
+    { pattern: /(?<!ป)นายก(?!รัฐมนตรี|อ|เ| |ส|ค|ศ|ิ)/g, newText: "นายกรัฐมนตรี" },
 
 
     //เติมจุด***********************************************
@@ -483,13 +491,13 @@ function performAdditionalReplacements(text) {
       var searchTexts = [
       "ตามาตรา", "มีมี", "จเรณักณิ์","บชก.","แยกยะ","สุดอันท้าย","กลไกล","กำหราบ","สุโขทั่ว","ส่งข้าว","บังคับบัญชี",
   "๒๕๒๕๖๕","สวรรณี","ครับครับ","หน่วนงาน","พรก.","พรป.","ประโต","แลกหน้า","ชั่งสังเกต","ป.ป.ง.",
-  "เราได้เราได้","ภูธรณ์","พาณิชย์นาวี","ทรุดโซม","เสื่อมโซม", "องค์การปกครองส่วนท้องถิ่น","กระทรวงพัฒนาสังคมและความมั่นคงของมนุษย์","ช่อโกง","องค์กรบริหารส่วนตำบล" , "วิพากย์วิจารณ์","อิสระภาพ" ,"ประทะ","อนุญาติ","ญาตพี่น้อง","ใต้ฝุ่น","กงศุล","กระทันหัน","กระเหรี่ยง","กระโหลก","กระลา","กำเน็จ","เกษียน","เกษียร","ประชาชา","จบคน","กราบของพระคุณ","ของพระคุณ","ตามา","แบตเตอร์รี่","จากองทุน","ศรัทรา","ศัทรา","กิตมศักดิ์","วีดีโอ","วีดิโอ","วีดีทัศน์","วิดีทัศน์","เสมอภาพ","เฮลธ์ตี","เรือยอร์ช","ไซซ์","สแตนบาย","โควิด-๑๙","โควิด - ๑๙","เอกเซลเลนต์","แมพปิง","เรคคอร์ด","รอบครอบ","กู๊ดกัฟเวอร์นแนนซ์","ซิสเตม","ซอฟต์เพาเวอร์","ผู้ดำรำ","อุทร","ศาลอุทร","ปริญาโท","ภาวะการณ์","ธกส.","หาเรือ","ปีจำปี","จะจังต่อ","อนุมาตรา ๑๐","อนุมาตรา","คุณธรรท","ประบวนการ","รองทุกข์","วินิจใน","เสาร์","อกนาจ","รุสันดาป","มาตรม","โดยเฉพาะยิ่ง","สำนักงานวัตกรรม","วุฒิสมาชิก","คามเห็น","ร่วงม","กับกับ","สำนักงานวัตกรรม","ชัชวาล","iRaw","ผิงฝา","ขออง","หมาดไทย","ยึดหยุ่น","มากน้อง","ยาวนา","อ่อนแอยู่","is of doing","หลบหลี","เกิดขั้น","สำนักงานวุฒิสภา","เวรคืน","ความท้าท้าย","สาธารณะชน","เรื่องเรื่อง","เอาไง","ยังไง","อย่างงั้น","อย่างงี้","เยอรมัน","ล็อค",
+  "เราได้เราได้","ภูธรณ์","พาณิชย์นาวี","ทรุดโซม","เสื่อมโซม", "องค์การปกครองส่วนท้องถิ่น","กระทรวงพัฒนาสังคมและความมั่นคงของมนุษย์","ช่อโกง","องค์กรบริหารส่วนตำบล" , "วิพากย์วิจารณ์","อิสระภาพ" ,"ประทะ","อนุญาติ","ญาตพี่น้อง","ใต้ฝุ่น","กงศุล","กระทันหัน","กระเหรี่ยง","กระโหลก","กระลา","กำเน็จ","เกษียน","เกษียร","ประชาชา","จบคน","กราบของพระคุณ","ของพระคุณ","ตามา","แบตเตอร์รี่","จากองทุน","ศรัทรา","ศัทรา","กิตมศักดิ์","วีดีโอ","วีดิโอ","วีดีทัศน์","วิดีทัศน์","เสมอภาพ","เฮลธ์ตี","เรือยอร์ช","ไซซ์","สแตนบาย","โควิด-๑๙","โควิด - ๑๙","เอกเซลเลนต์","แมพปิง","เรคคอร์ด","รอบครอบ","กู๊ดกัฟเวอร์นแนนซ์","ซิสเตม","ซอฟต์เพาเวอร์","ผู้ดำรำ","อุทร","ศาลอุทร","ปริญาโท","ภาวะการณ์","ธกส.","หาเรือ","ปีจำปี","จะจังต่อ","อนุมาตรา ๑๐","อนุมาตรา","คุณธรรท","ประบวนการ","รองทุกข์","วินิจใน","เสาร์","อกนาจ","รุสันดาป","มาตรม","โดยเฉพาะยิ่ง","สำนักงานวัตกรรม","วุฒิสมาชิก","คามเห็น","ร่วงม","กับกับ","สำนักงานวัตกรรม","ชัชวาล","iRaw","ผิงฝา","ขออง","หมาดไทย","ยึดหยุ่น","มากน้อง","ยาวนา","อ่อนแอยู่","is of doing","หลบหลี","เกิดขั้น","สำนักงานวุฒิสภา","เวรคืน","ความท้าท้าย","สาธารณะชน","เรื่องเรื่อง","เอาไง","ยังไง","อย่างงั้น","อย่างงี้","เยอรมัน","ล็อค","อิสราอีก","เจาจะ","ท่านท่าน","ล่วงน่า"
 
   ];
   
   var suggestions = {
     "ตามาตรา": "ตามมาตรา","จเรณักณิ์": "จเรศักณิ์","บชก.": "บช.ก.","แยกยะ": "แยกแยะ","กลไกล": "กลไก","กำหราบ": "กำราบ","สวรรณี": "สุวรรณี",
-    "พรก.": "พ.ร.ก.","พรป.": "พ.ร.ป.","ชั่งสังเกต": "ช่างสังเกต","ป.ป.ง.": "ปปง.","ช่อโกง": "ฉ้อโกง","ภูธรณ์": "ภูธร","พาณิชย์นาวี": "พาณิชยนาวี","ทรุดโซม": "ทรุดโทรม","เสื่อมโซม": "เสื่อมโทรม","องค์การปกครองส่วนท้องถิ่น": "องค์กรปกครองส่วนท้องถิ่น","กระทรวงพัฒนาสังคมและความมั่นคงของมนุษย์": "กระทรวงการพัฒนาสังคมและความมั่นคงของมนุษย์","องค์กรบริหารส่วนตำบล" : "องค์การบริหารส่วนตำบล","วิพากย์วิจารณ์": "วิพากษ์วิจารณ์","อิสระภาพ": "อิสรภาพ","ประทะ": "ปะทะ","อนุญาติ": "อนุญาต","ญาตพี่น้อง": "ญาติพี่น้อง","ใต้ฝุ่น": "ไต้ฝุ่น","กงศุล": "กงสุล","กระทันหัน": "กะทันหัน","กระเหรี่ยง": "กะเหรี่ยง","กระโหลก": "กะโหลก","กระลา": "กะลา","กำเน็จ": "กำเหน็จ","เกษียน": "เกษียณ","เกษียร": "เกษียณ","แบตเตอร์รี่": "แบตเตอรี่","ศรัทรา": "ศรัทธา","ศัทรา": "ศรัทธา","กิตมศักดิ์": "กิตติมศักดิ์","วีดีโอ": "วิดีโอ","วีดิโอ": "วิดีโอ","วีดีทัศน์": "วีดิทัศน์","วิดีทัศน์": "วีดิทัศน์","เสมอภาพ": "เสมอภาค","เฮลธ์ตี": "เฮลท์ตี","เรือยอร์ช":"เรือยอชต์","ไซซ์": "ไซส์","สแตนบาย": "สแตนด์บาย","โควิด-๑๙": "โควิด-19","เอกเซลเลนต์": "เอ็กเซลเลนต์","แมพปิง": "แมปปิง","เรคคอร์ด": "เรกคอร์ด","รอบครอบ": "รอบคอบ","กู๊ดกัฟเวอร์นแนนซ์": "กู๊ดกัฟเวอร์แนนซ์","ซิสเตม": "ซิสเต็ม","ซอฟต์เพาเวอร์": "ซอฟต์พาวเวอร์","ผู้ดำรำ": "ผู้ดำรง","อุทร": "อุทธรณ์ (อุทรเฉย ๆ แปลว่าท้อง)","ศาลอุทร": "ศาลอุทธรณ์","ภาวะการณ์": "ภาวการณ์","ธกส.": "ธ.ก.ส.","หาเรือ": "หาเรือ หรือหารือ","ปีจำปี": "ประจำปี หรือเปล่า","จะจังต่อ": "จะแจ้งต่อ","อนุมาตรา ๑๐": "(๑๐)","อนุมาตรา": "อาจจะเป็นวงเล็บ","เสาร์": "วันเสาร์ หรือ เสาไฟ","รุสันดาป": "รถสันดาป","มาตรม": "มาตรา","โดยเฉพาะยิ่ง": "โดยเฉพาะอย่างยิ่ง","สำนักงานวัตกรรม": "สำนักงานนวัตกรรม","วุฒิสมาชิก": "สมาชิกวุฒิสภา","คามเห็น": "ความเห็น","ร่วงม": "ร่วม","กับกับ": "กับ","ชัชวาล": "ชัชวาลย์","iRaw": "iLaw","ผิงฝา": "พิงฝา","ขออง": "ของ","หมาดไทย": "มหาดไทย","ยึดหยุ่น": "ยืดหยุ่น","มากน้อง": "มากน้อย","ยาวนา": "ยาวนาน","อ่อนแอยู่": "อ่อนแออยู่","is of doing": "ease of doing","หลบหลี": "หลบหนี","เกิดขั้น": "เกิดขึ้น","สำนักงานวุฒิสภา": "สำนักงานเลขาธิการวุฒิสภา","เวรคืน": "เวนคืน","ความท้าท้าย": "ความท้าทาย","สาธารณะชน": "สาธารณชน","เยอรมัน":"เยอรมนี","ล็อค":"ล็อก",
+    "พรก.": "พ.ร.ก.","พรป.": "พ.ร.ป.","ชั่งสังเกต": "ช่างสังเกต","ป.ป.ง.": "ปปง.","ช่อโกง": "ฉ้อโกง","ภูธรณ์": "ภูธร","พาณิชย์นาวี": "พาณิชยนาวี","ทรุดโซม": "ทรุดโทรม","เสื่อมโซม": "เสื่อมโทรม","องค์การปกครองส่วนท้องถิ่น": "องค์กรปกครองส่วนท้องถิ่น","กระทรวงพัฒนาสังคมและความมั่นคงของมนุษย์": "กระทรวงการพัฒนาสังคมและความมั่นคงของมนุษย์","องค์กรบริหารส่วนตำบล" : "องค์การบริหารส่วนตำบล","วิพากย์วิจารณ์": "วิพากษ์วิจารณ์","อิสระภาพ": "อิสรภาพ","ประทะ": "ปะทะ","อนุญาติ": "อนุญาต","ญาตพี่น้อง": "ญาติพี่น้อง","ใต้ฝุ่น": "ไต้ฝุ่น","กงศุล": "กงสุล","กระทันหัน": "กะทันหัน","กระเหรี่ยง": "กะเหรี่ยง","กระโหลก": "กะโหลก","กระลา": "กะลา","กำเน็จ": "กำเหน็จ","เกษียน": "เกษียณ","เกษียร": "เกษียณ","แบตเตอร์รี่": "แบตเตอรี่","ศรัทรา": "ศรัทธา","ศัทรา": "ศรัทธา","กิตมศักดิ์": "กิตติมศักดิ์","วีดีโอ": "วิดีโอ","วีดิโอ": "วิดีโอ","วีดีทัศน์": "วีดิทัศน์","วิดีทัศน์": "วีดิทัศน์","เสมอภาพ": "เสมอภาค","เฮลธ์ตี": "เฮลท์ตี","เรือยอร์ช":"เรือยอชต์","ไซซ์": "ไซส์","สแตนบาย": "สแตนด์บาย","โควิด-๑๙": "โควิด-19","เอกเซลเลนต์": "เอ็กเซลเลนต์","แมพปิง": "แมปปิง","เรคคอร์ด": "เรกคอร์ด","รอบครอบ": "รอบคอบ","กู๊ดกัฟเวอร์นแนนซ์": "กู๊ดกัฟเวอร์แนนซ์","ซิสเตม": "ซิสเต็ม","ซอฟต์เพาเวอร์": "ซอฟต์พาวเวอร์","ผู้ดำรำ": "ผู้ดำรง","อุทร": "อุทธรณ์ (อุทรเฉย ๆ แปลว่าท้อง)","ศาลอุทร": "ศาลอุทธรณ์","ภาวะการณ์": "ภาวการณ์","ธกส.": "ธ.ก.ส.","หาเรือ": "หาเรือ หรือหารือ","ปีจำปี": "ประจำปี หรือเปล่า","จะจังต่อ": "จะแจ้งต่อ","อนุมาตรา ๑๐": "(๑๐)","อนุมาตรา": "อาจจะเป็นวงเล็บ","เสาร์": "วันเสาร์ หรือ เสาไฟ","รุสันดาป": "รถสันดาป","มาตรม": "มาตรา","โดยเฉพาะยิ่ง": "โดยเฉพาะอย่างยิ่ง","สำนักงานวัตกรรม": "สำนักงานนวัตกรรม","วุฒิสมาชิก": "สมาชิกวุฒิสภา","คามเห็น": "ความเห็น","ร่วงม": "ร่วม","กับกับ": "กับ","ชัชวาล": "ชัชวาลย์","iRaw": "iLaw","ผิงฝา": "พิงฝา","ขออง": "ของ","หมาดไทย": "มหาดไทย","ยึดหยุ่น": "ยืดหยุ่น","มากน้อง": "มากน้อย","ยาวนา": "ยาวนาน","อ่อนแอยู่": "อ่อนแออยู่","is of doing": "ease of doing","หลบหลี": "หลบหนี","เกิดขั้น": "เกิดขึ้น","สำนักงานวุฒิสภา": "สำนักงานเลขาธิการวุฒิสภา","เวรคืน": "เวนคืน","ความท้าท้าย": "ความท้าทาย","สาธารณะชน": "สาธารณชน","เยอรมัน":"เยอรมนี","ล็อค":"ล็อก","อิสราอีก" : "อิสราเอล" , "เจาจะ" : "เขาจะ" , "ล่วงน่า" : "ล่วงหน้า" , 
 
 
       };
