--- a/Conword.html
+++ b/Conword.html
@@ -12,7 +12,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.3/dragula.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.3/dragula.min.css" />
         <div class="footer">
-      เวอร์ชัน 02.03.01  06/09/67 15.23 น.
+      เวอร์ชัน 02.03.01  06/09/67 15.31 น.
     </div>
     <style>
       body {
@@ -179,6 +179,13 @@
           z-index: 1;
           height: 20px;
       }
+
+        /* ป้องกันการเลือกข้อความใน clipList */
+        #clipList {
+            user-select: none; /* ป้องกันการคลุมดำข้อความ */
+            -webkit-user-select: none; /* สำหรับเบราว์เซอร์ Safari */
+            -ms-user-select: none; /* สำหรับเบราว์เซอร์ Internet Explorer */
+        }      
 
       .action-btn {
           top: 64px;
